@@ -8,6 +8,9 @@ Changes with Apache 2.4.3
      possible XSS for a site where untrusted users can upload files to
      a location with MultiViews enabled. [Niels Heinen <heinenn google.com>]
 
+  *) mpm_event, mpm_worker: Remain active amidst prevalent child process
+     resource shortages.  [Jeff Trawick]
+
   *) Add "strict" and "warnings" pragmas to Perl scripts.  [Rich Bowen]
 
   *) Honor DefaultRuntimeDir for mutexes, socache and CGID socket.
